src/app/components/about/about.styles.scss
.about {
  display: flex;
  width: 100%;
  justify-content: center;
  // max-width: 1260px;
  z-index: 3;
  background: linear-gradient(45deg, #1EACF4 0%, #1EACF4 56%, #34BBFF 56%, #34BBFF 100%);
  padding: 45px 0;
  position: relative;

  & > span {
    position: absolute;
    top: -99px;
  }

  @include mobile {
    flex-direction: column;
    padding: 0px 0 40px;
  }

  &__heading {
    font-weight: 800;
    font-size: 32px;
    line-height: 60px;
    color: #FFFFFF;
    margin: 0;
    font-family: 'Gloria Hallelujah';

    @include tablet {
      font-size: 32px;
    }

    @include mobile {
      font-size: 26px;
      line-height: 32px;
      margin: 40px 0 0;
    }
  }
  
  .social-wrapper {
    display: flex;
    margin: 20px auto 0 0;
    flex-basis: content;
    justify-content: space-between;

    @include mobile {
      margin: 12px auto 0 0;
    }
  }

  .social-icon {
    margin-left: -10px;
    padding: 0 10px;

    &:not(:first-of-type) {
      padding: 0 10px;
    }
  }

  &__colonialist {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px;
    width: calc(100% - 40px);

    @media (min-width: 768px) {
      padding: 0 0 0 30px;
      width: auto;
    }
  }

  &__texts {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-left: 60px;
    color: white;
    max-width: 660px;
    padding-right: 30px;

    @include mobile {
      margin: 0 auto;
      padding: 0 20px;
      width: calc(100% - 40px);
    }
  }

  h5 {
    font-weight: 800;
    font-size: 24px;
    margin: 20px 0 0;

    @include mobile {
      font-size: 18px;
    }
  }

  p {
    text-align: justify;
    font-size: 14px;
    line-height: 24px;
    margin: 10px 0;

    @include mobile {
      margin: 10px 0;

      &:last-of-type {
        margin: 10px 0 20px;
      }
    }
  }

  &__button {
    display: flex;
    border: 0;
    height: auto;
    align-items: center;
    padding: 0;
    width: 100%;
    text-align: center;
    transition: all 0.1s linear;
    margin: 25px 0 0;
    background: #FBA41C;
    max-width: 200px;
    text-decoration: none;
    color: black;

    &:visited {
      color: black;
    }

    @include tablet {
      max-width: none;
      margin: 30px 0 0;
    }

    &:hover,
    &:focus {
      cursor: pointer;
    }

    &-title {
      color: #ffffff;
      margin: 0;
      width: 100%;
      text-transform: uppercase;
      font-size: 16px;
      line-height: 25px;
      font-weight: 800;
      padding: 8px 30px;

      @include tablet {
        padding: 16px 8px;
        font-size: 16px;
      }
    }
  }
}

